--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,7 +1,7 @@
 /* Banner.css */
 
 .banner-video-section {
-  height: 100vh;
+  height: 100dvh;
   width: 100%;
   position: relative;
   overflow: hidden;
