--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,8 +1,12 @@
 /* Banner.css */
 
 .banner-video-section {
-  height: 100dvh;
-  width: 100%;
+ width: 100%;
+  height: 100vh; /* ensures full height */
+  min-height: 100vh;
+  max-height: 100vh;
+  padding: 0;
+  margin: 0;
   position: relative;
   overflow: hidden;
 }
