--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -91,7 +91,7 @@ html, body {
 
 .img-sketch {
   z-index: 2;
-  pointer-events: none; /* so it doesn't interfere with interactions */
+  pointer-events: none; 
   opacity: 1;
   top: 49%;
   left: 50%;
@@ -107,7 +107,7 @@ html, body {
   clip-path: inset(100% 0 0 0);
 }
 
-/* Responsive Styles */
+
 
 @media (max-width: 768px) {
     .cover-about-content-section{
@@ -154,7 +154,7 @@ html, body {
   }
   .img-sketch {
   z-index: 2;
-  pointer-events: none; /* so it doesn't interfere with interactions */
+  pointer-events: none; 
   opacity: 1;
 
 }
