--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,8 +1,7 @@
-/* Banner.css */
 
 .banner-video-section {
  width: 100%;
-  height: 100vh; /* ensures full height */
+  height: 100vh; 
   min-height: 100vh;
   max-height: 100vh;
   padding: 0;
@@ -29,7 +28,7 @@
   position: absolute;
   inset: 0;
   display: block;
-  image-rendering: auto; /* ensures smoothness */
+  image-rendering: auto; 
   will-change: transform, opacity;
 }
 
